--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,8 +6,9 @@
             <li><a href="https://glacial-refuge-80306.herokuapp.com/">Abhinay Reddy Kaitha</a></li>
             <li><a href="https://dristiw12.herokuapp.com/">Dristi Marasini</a></li>
             <li><a href="https://bheemireddy-app.herokuapp.com/index">Divyaharshini Bheemireddy</a></li>
-            <li><a href="#">Harish Reddy Vavilala</a></li>
+            <li><a href="https://vavilala.herokuapp.com/">Harish Reddy Vavilala</a></li>
           </ul>
         </li>
     </ul>
   </li>
+  
